--- a/promapp/templates/index.html
+++ b/promapp/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}Головна — PROM Project{% endblock %}
+{% block title %}Головна — АСМА{% endblock %}
 
 {% block content %}
 <div class="text-center animate__animated animate__fadeIn">
-  <h1 class="display-5 fw-bold mb-3">Ласкаво просимо до <span class="text-primary">PROM Project</span></h1>
+  <h1 class="display-5 fw-bold mb-3">Ласкаво просимо до <span class="text-primary">АСМА</span></h1>
   <p class="lead mb-5">Оберіть розділ для роботи:</p>
   <div class="d-grid gap-4 col-8 mx-auto">
     <a class="btn btn-modern btn-lg btn-primary animate__animated animate__pulse animate__infinite" 
