--- a/promapp/templates/user_profile.html
+++ b/promapp/templates/user_profile.html
@@ -7,7 +7,7 @@
 
   <!-- Опис функціоналу -->
   <div class="mb-5 p-4 bg-light rounded shadow-sm">
-    <h2 class="h4">Вітаємо в PROM Project</h2>
+    <h2 class="h4">Вітаємо в АСМА</h2>
     <p class="mb-0">
       Цей сервіс дозволяє:
       <ul class="mb-0">
